--- a/TRAINER/my-first-web-part/config/config.json
+++ b/TRAINER/my-first-web-part/config/config.json
@@ -9,10 +9,19 @@
           "manifest": "./src/webparts/helloWorld/HelloWorldWebPart.manifest.json"
         }
       ]
+    },
+    "type-script-vn-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/typeScriptVn/TypeScriptVnWebPart.js",
+          "manifest": "./src/webparts/typeScriptVn/TypeScriptVnWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {},
   "localizedResources": {
-    "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js"
+    "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js",
+    "TypeScriptVnWebPartStrings": "lib/webparts/typeScriptVn/loc/{locale}.js"
   }
 }
