react wp changed

--- a/TRAINER/react-wp-vn/src/webparts/defaultVn/DefaultVnWebPart.manifest.json
+++ b/TRAINER/react-wp-vn/src/webparts/defaultVn/DefaultVnWebPart.manifest.json
@@ -21,7 +21,8 @@
     "description": { "default": "default-vn description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "default-vn"
+      "description": "default-vn",
+      "userString": "vn"
     }
   }]
 }
