--- a/TRAINER/react-wp-vn/.yo-rc.json
+++ b/TRAINER/react-wp-vn/.yo-rc.json
@@ -5,7 +5,7 @@
     "libraryId": "e1b2dd2b-afa4-4082-a413-b11534a7c024",
     "environment": "spo",
     "packageManager": "npm",
-    "isCreatingSolution": true,
+    "isCreatingSolution": false,
     "isDomainIsolated": false,
     "componentType": "webpart"
   }
